--- a/package.json
+++ b/package.json
@@ -17,7 +17,24 @@
         "command": "stocky.helloWorld",
         "title": "Hello World"
       }
-    ]
+    ],
+    "viewsContainers": {
+      "activitybar": [
+        {
+          "id": "stocky",
+          "title": "Stocky",
+          "icon": "src/images/icon.svg"
+        }
+      ]
+    },
+    "views": {
+      "stocky": [
+          {
+              "id": "stockyView",
+              "name": "Stocky Main View"
+          }
+      ]
+  }
   },
   "scripts": {
     "vscode:prepublish": "npm run package",
