--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": ["onView:stockyView"],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "stocky.helloWorld",
-        "title": "Hello World"
+        "command": "stocky.showIntroduction",
+        "title": "Show Introduction"
+      },
+      {
+        "command": "stocky.showItemTwo",
+        "title": "Show Item Two"
+      },
+      {
+        "command": "stocky.showItemThree",
+        "title": "Show Item Three"
       }
     ],
     "viewsContainers": {
